tests/fixtures/errors/bool_arith.z
# Arithmetic operators require numeric operands: adding a bool (here the result
# of a comparison) to a number is a type error, not a silent coercion.
main: function is {
    a: 5
    b: 3
    c: (a > b) + 10
    print "\{c}"
}
